added one more time

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -21,15 +21,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 836cbd3] added one more time\n",
+      " 4 files changed, 66 insertions(+), 1 deletion(-)\n",
+      " create mode 100644 .ipynb_checkpoints/Untitled-checkpoint.ipynb\n",
+      " create mode 100644 Untitled.ipynb\n",
+      " create mode 100644 f.txt\n",
+      "[master e0f3c12] added one more time\n",
+      " 1 file changed, 1 insertion(+)\n",
+      "[master 70577c8] added one more time\n",
+      " 1 file changed, 1 insertion(+)\n",
+      "[master 7f58ef8] added one more time\n",
+      " 1 file changed, 1 insertion(+)\n",
+      "[master 6967465] added one more time\n",
+      " 1 file changed, 1 insertion(+)\n",
+      "[master 87d2015] added one more time\n",
+      " 1 file changed, 1 insertion(+)\n",
+      "[master bf07c34] added one more time\n",
+      " 1 file changed, 1 insertion(+)\n",
+      "[master 12a0737] added one more time\n",
+      " 1 file changed, 1 insertion(+)\n",
+      "[master 873c806] added one more time\n",
+      " 1 file changed, 1 insertion(+)\n",
+      "[master 40f069c] added one more time\n",
+      " 1 file changed, 1 insertion(+)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    handler = open('f.txt', 'a')\n",
+    "    handler.write('hello world\\n')\n",
+    "    handler.close()\n",
+    "    !git add -A\n",
+    "    !git commit -m \"added one more time\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "for i in range(10):\n",
-    "    han\n",
-    "    handler.write('hello world\\n')\n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
