added one more time

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -21,35 +21,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 836cbd3] added one more time\n",
-      " 4 files changed, 66 insertions(+), 1 deletion(-)\n",
-      " create mode 100644 .ipynb_checkpoints/Untitled-checkpoint.ipynb\n",
-      " create mode 100644 Untitled.ipynb\n",
-      " create mode 100644 f.txt\n",
-      "[master e0f3c12] added one more time\n",
+      "[master 77fe8a5] added one more time\n",
+      " 2 files changed, 44 insertions(+), 4 deletions(-)\n",
+      "[master c42b4f9] added one more time\n",
       " 1 file changed, 1 insertion(+)\n",
-      "[master 70577c8] added one more time\n",
+      "[master 1a2aa5a] added one more time\n",
       " 1 file changed, 1 insertion(+)\n",
-      "[master 7f58ef8] added one more time\n",
+      "[master 44edfca] added one more time\n",
       " 1 file changed, 1 insertion(+)\n",
-      "[master 6967465] added one more time\n",
+      "[master da4dc23] added one more time\n",
       " 1 file changed, 1 insertion(+)\n",
-      "[master 87d2015] added one more time\n",
+      "[master 0781fa9] added one more time\n",
       " 1 file changed, 1 insertion(+)\n",
-      "[master bf07c34] added one more time\n",
+      "[master 3d8f4d8] added one more time\n",
       " 1 file changed, 1 insertion(+)\n",
-      "[master 12a0737] added one more time\n",
+      "[master f37d02f] added one more time\n",
       " 1 file changed, 1 insertion(+)\n",
-      "[master 873c806] added one more time\n",
+      "[master b61d741] added one more time\n",
       " 1 file changed, 1 insertion(+)\n",
-      "[master 40f069c] added one more time\n",
+      "[master fdfb832] added one more time\n",
       " 1 file changed, 1 insertion(+)\n"
      ]
     }
@@ -65,10 +62,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \u001b[33mfdfb832\u001b[m\u001b[33m (\u001b[m\u001b[1;36mHEAD -> \u001b[m\u001b[1;32mmaster\u001b[m\u001b[33m)\u001b[m added one more time\r\n",
+      "* \u001b[33mb61d741\u001b[m added one more time\r\n",
+      "* \u001b[33mf37d02f\u001b[m added one more time\r\n",
+      "* \u001b[33m3d8f4d8\u001b[m added one more time\r\n",
+      "* \u001b[33m0781fa9\u001b[m added one more time\r\n",
+      "* \u001b[33mda4dc23\u001b[m added one more time\r\n",
+      "* \u001b[33m44edfca\u001b[m added one more time\r\n",
+      "* \u001b[33m1a2aa5a\u001b[m added one more time\r\n",
+      "* \u001b[33mc42b4f9\u001b[m added one more time\r\n",
+      "* \u001b[33m77fe8a5\u001b[m added one more time\r\n",
+      "* \u001b[33m40f069c\u001b[m added one more time\r\n",
+      "* \u001b[33m873c806\u001b[m added one more time\r\n",
+      "* \u001b[33m12a0737\u001b[m added one more time\r\n",
+      "* \u001b[33mbf07c34\u001b[m added one more time\r\n",
+      "* \u001b[33m87d2015\u001b[m added one more time\r\n",
+      "* \u001b[33m6967465\u001b[m added one more time\r\n",
+      "* \u001b[33m7f58ef8\u001b[m added one more time\r\n",
+      "* \u001b[33m70577c8\u001b[m added one more time\r\n",
+      "* \u001b[33me0f3c12\u001b[m added one more time\r\n",
+      "* \u001b[33m836cbd3\u001b[m added one more time\r\n",
+      "* \u001b[33mf6e57ff\u001b[m\u001b[33m (\u001b[m\u001b[1;31morigin/master\u001b[m\u001b[33m)\u001b[m fully added\r\n",
+      "* \u001b[33m14c0149\u001b[m partial added\r\n",
+      "\u001b[31m|\u001b[m *   \u001b[33mfb64104\u001b[m\u001b[33m (\u001b[m\u001b[1;31morigin/greeter\u001b[m\u001b[33m, \u001b[m\u001b[1;32mgreeter\u001b[m\u001b[33m)\u001b[m merging manually\r\n",
+      "\u001b[31m|\u001b[m \u001b[32m|\u001b[m\u001b[33m\\\u001b[m  \r\n",
+      "\u001b[31m|\u001b[m \u001b[32m|\u001b[m * \u001b[33m7bdc490\u001b[m\u001b[33m (\u001b[m\u001b[1;31morigin/gitlearning\u001b[m\u001b[33m, \u001b[m\u001b[1;32mgitlearning\u001b[m\u001b[33m)\u001b[m mod file01.py\r\n",
+      "\u001b[31m|\u001b[m \u001b[32m|\u001b[m\u001b[31m/\u001b[m  \r\n",
+      "\u001b[31m|\u001b[m\u001b[31m/\u001b[m\u001b[32m|\u001b[m   \r\n",
+      "\u001b[31m|\u001b[m * \u001b[33m577e302\u001b[m sheldon greeter\r\n",
+      "\u001b[31m|\u001b[m\u001b[31m/\u001b[m  \r\n",
+      "* \u001b[33m4d75524\u001b[m greet by name\r\n",
+      "* \u001b[33m3f7dc8d\u001b[m added file2\r\n",
+      "* \u001b[33m327a086\u001b[m committing file01.py to my first git repo\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git fulltree"
+   ]
   }
  ],
  "metadata": {
